# docs/swagger/swagger.json
@@ -105,6 +105,45 @@
                     }
                 }
             }
+        },
+        "/users/{page}": {
+            "get": {
+                "description": "Get page of user list",
+                "summary": "Get users list",
+                "operationId": "GetUsers",
+                "responses": {
+                    "200": {
+                        "description": "Get successfully",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Result"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid pade",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/models.Result"
+                        }
+                    },
+                    "404": {
+                        "description": "Users not found",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/models.Result"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/models.Result"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
